{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 9,
  "lineage": "cf3fbff2-23ab-0fb6-7101-0d847d2c75a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terrafom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:568199612607:instance/i-0623e7dd7b53d4b24",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0623e7dd7b53d4b24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c52303d70e16e545",
            "private_dns": "ip-172-31-42-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.205",
            "public_dns": "ec2-3-81-85-138.compute-1.amazonaws.com",
            "public_ip": "3.81.85.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016fd365c0b2ac99b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e18618789c0a8883",
            "tags": {
              "Name": "terrafom-0"
            },
            "tags_all": {
              "Name": "terrafom-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5d0833f739f31c"
            ]
          },
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:568199612607:instance/i-00cdf3d8596bab1cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cdf3d8596bab1cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016097cdbaf080fe2",
            "private_dns": "ip-172-31-42-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.106",
            "public_dns": "ec2-3-85-133-16.compute-1.amazonaws.com",
            "public_ip": "3.85.133.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01771a7133f95b204",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e18618789c0a8883",
            "tags": {
              "Name": "terrafom-1"
            },
            "tags_all": {
              "Name": "terrafom-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5d0833f739f31c"
            ]
          },
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:568199612607:instance/i-0f18b5c4522657f60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f18b5c4522657f60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9125fab6705823a",
            "private_dns": "ip-172-31-32-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.251",
            "public_dns": "ec2-54-91-18-108.compute-1.amazonaws.com",
            "public_ip": "54.91.18.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02d2d1d1ee63fc72c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e18618789c0a8883",
            "tags": {
              "Name": "terrafom-2"
            },
            "tags_all": {
              "Name": "terrafom-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5d0833f739f31c"
            ]
          },
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.admin_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_ssh",
      "provider": "module.admin_ssh_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568199612607:security-group/sg-05c5d0833f739f31c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05c5d0833f739f31c",
            "ingress": [],
            "name": "admin-ssh",
            "name_prefix": "",
            "owner_id": "568199612607",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin-ssh"
            },
            "tags_all": {
              "Name": "admin-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c855deae9233889"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.admin_ssh_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_out",
      "provider": "module.admin_ssh_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568199612607:security-group-rule/sgr-003c8e9c811a052b5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-003c8e9c811a052b5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c5d0833f739f31c",
            "security_group_rule_id": "sgr-003c8e9c811a052b5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.admin_ssh_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_in",
      "provider": "module.admin_ssh_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568199612607:security-group-rule/sgr-0a32612b2353a2295",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a32612b2353a2295",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c5d0833f739f31c",
            "security_group_rule_id": "sgr-0a32612b2353a2295",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.admin_ssh_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ins",
      "provider": "module.admin_ssh_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1.1.1.1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568199612607:security-group-rule/sgr-0d4355e13b7116982",
            "cidr_ipv4": "1.1.1.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d4355e13b7116982",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c5d0833f739f31c",
            "security_group_rule_id": "sgr-0d4355e13b7116982",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        },
        {
          "index_key": "8.8.8.8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568199612607:security-group-rule/sgr-07d6361910954a81a",
            "cidr_ipv4": "8.8.8.8/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07d6361910954a81a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c5d0833f739f31c",
            "security_group_rule_id": "sgr-07d6361910954a81a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin_ssh_sg.aws_security_group.admin_ssh"
          ]
        }
      ]
    }
  ]
}